# htask

./: CMakeLists.txt  Dockerfile  README.md  conanfile.txt  docker-compose.yaml
frontend/: README.md  next.config.js  package.json  pnpm-lock.yaml
frontend/app/: layout.tsx  page.tsx  providers.tsx
frontend/app/api/bba/: route.ts
frontend/app/api/orderbook/[exchange]/: route.ts
frontend/app/api/pbd/: route.ts
frontend/app/api/vbd/: route.ts
frontend/components/: BbaDisplay.tsx  MidPriceDisplay.tsx  OrderBook.tsx  OrderBookDashboard.tsx  VolBandsDisplay.tsx
frontend/lib/: grpc-cache.ts  grpc-client.ts  hooks.ts
frontend/proto/: pubsub.proto
include/: OrderBook.h  md_binance.h  md_gateio.h  md_okx.h  server.h  util.h
include/md/: binance.h  gateio.h  md_base.h  okx.h
proto/: pubsub.proto
sandbox/: CMakeLists.txt
sandbox/src/: GwBinance.cpp  MdBinance.cpp  MdGateIo.cpp  MdOkx.cpp
src/: OrderBook.cpp  consumer.cpp  md_binance.cpp  md_gateio.cpp  md_okx.cpp  pricer.cpp  server.cpp
src/md/: binance.cpp  gateio.cpp  md_base.cpp  okx.cpp
test/: CMakeLists.txt  TestOrderBook.cpp  TestUtil.cpp
